add a date reservation button on equipments#show page

--- a/app/assets/stylesheets/components/_equipment-card.scss
+++ b/app/assets/stylesheets/components/_equipment-card.scss
@@ -4,9 +4,17 @@
 }
 
 .equipment-description {
-margin: 60px;
+  margin: 60px;
+  width: 300px;
 }
 
 .btn-equipment-reserve {
   border-radius: 4px;
+}
+
+.choose_date {
+  background-color: #FFFFFF;
+  margin: auto;
+  padding: 14px;
+  text-align : center;
 }
