--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -28,6 +28,7 @@
   background-position: center;
   color: black;
   position: relative;
+  box-shadow: 0 14px 28px
 }
 .card-user {
   position: absolute;
