--- a/app/views/equipments/show.html.erb
+++ b/app/views/equipments/show.html.erb
@@ -1,7 +1,11 @@
 <div class="container">
   <div class="equipment-card">
-    <div class="equipment-img"> <img src="https://www.decathlon.de/media/838/8385418/big_64b660c5-8c45-4199-9d0e-6c1b751917a0.jpg" width="500" alt="">
-    </div>
+    <% if @equipment.photo.blank? %>
+      <div class="equipment-img"> <img src="https://www.decathlon.de/media/838/8385418/big_64b660c5-8c45-4199-9d0e-6c1b751917a0.jpg" width="500" alt="">
+      </div>
+    <% else %>
+      <%= cl_image_tag @equipment.photo, height: 300, width: 400, crop: :fill %>
+    <% end %>
     <div class="equipment-description">
       <h1><%= @equipment.category.capitalize %></h1>
       <p>brand: <%= @equipment.brand %></p>
@@ -19,3 +23,5 @@
     </div>
   </div>
 </div>
+
+
