landing page only 2 features missing, search bar and constantins stuff

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,14 +1,18 @@
 <div class="footer">
 
   <div class="footer-links">
-    <a href="#"><i class="fa fa-instagram"></i></a>
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
 
-  <div class="footer-copyright">
-    This footer is made with <i class="fa fa-heart"></i> at Le Wagon
+  <div class="footer-details">
+    <p>
+    <p>Rudi Dutschkestr.26</p>
+    <p>10304 Berlin</p>
+    <p> Deutschland</p>
+    <p>030 53665777</p>
   </div>
 
 </div>
