--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,12 @@
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.surfer.com/uploads/2012/11/SFGP-110400-NSU-04-HR.jpg');">
   <div class="banner-content">
     <h1>SportsX</h1>
     <p>The best sports equipment rental website</p>
-    <a class="btn btn-primary btn-lg">search for equipment</a>
+    <form action="">
+      <input type="text" placeholder="Search">
+      <input type="submit">
+    </form>
+
   </div>
 </div>
