--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,10 +7,99 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-  <%= link_to "Men", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-  <%= link_to "Women", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-  <%= link_to "Children", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-  <%= link_to "Sports", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <div class="navbar-wagon-item">
+        <div class="dropdown">
+            <%= link_to "Men", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".cloth", default: "Cloth") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".shoes", default: "Shoes") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".equipment", default: "Equipment") %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+
+      <div class="navbar-wagon-item">
+        <div class="dropdown">
+            <%= link_to "Woman", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".cloth", default: "Cloth") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".shoes", default: "Shoes") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".equipment", default: "Equipment") %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="navbar-wagon-item">
+        <div class="dropdown">
+            <%= link_to "Children", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".cloth", default: "Cloth") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".shoes", default: "Shoes") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".equipment", default: "Equipment") %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="navbar-wagon-item">
+        <div class="dropdown">
+            <%= link_to "Sports", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".outdoor", default: "Outdoor") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".watersports", default: "Watersports") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".mountain", default: "Mountain") %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+
 
     <% if user_signed_in? %>
 
