--- a/app/assets/stylesheets/components/_equipment-card.scss
+++ b/app/assets/stylesheets/components/_equipment-card.scss
@@ -9,7 +9,8 @@
 }
 
 .btn-equipment-reserve {
-  border-radius: 4px;
+  border-radius: 5px;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
 
 .choose_date {
@@ -17,4 +18,10 @@
   margin: auto;
   padding: 14px;
   text-align : center;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+}
+
+.equipment-img {
+  margin: auto;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
