--- a/app/views/equipments/index.html.erb
+++ b/app/views/equipments/index.html.erb
@@ -1,4 +1,8 @@
 <br>
+      <div class="row" class="flex-item" id="button-position">
+        <a href="http://localhost:3000/equipments/new" class="btn-treehouse">I want to rent out my stuff!</a>
+      </div>
+<br>
 <div class="container">
   <div class="row">
     <div class="flex item">
@@ -11,7 +15,7 @@
               <h2>Surf Board</h2>
               <p>Very cool, the best</p>
             </div>
-            <a class="card-link" href="#" ></a>
+            <a class="card-link" href="</equipments/1" ></a>
           </div>
         </div>
       </div>
@@ -145,6 +149,9 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
+
+<br>
 
