changes to landing page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -24,5 +24,10 @@
 }
 
 .banner input {
-  color: rgb(230,230,230);
+  color: rgb(0,0,0);
+  font-color: rgb(0,0,0);
+}
+
+.buttonorange {
+  background-color: rgb(255,165,0);
 }
