--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <p>The best sports equipment rental website</p>
     <form action="">
       <input type="text" placeholder="Search">
-      <input type="submit">
+      <input type="submit" value="Send" class="buttonorange">
     </form>
 
   </div>
