--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,81 +9,16 @@
 
       <div class="navbar-wagon-item">
         <div class="dropdown">
-            <%= link_to "Men", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
+            <%= link_to "Categories", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
               <%= link_to "#" do %>
-                <%= t(".cloth", default: "Cloth") %>
+                <%= t(".aviation", default: "Aviation/air-related") %>
               <% end %>
             </li>
             <li>
               <%= link_to "#" do %>
-                <%= t(".shoes", default: "Shoes") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <%= t(".equipment", default: "Equipment") %>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-
-      <div class="navbar-wagon-item">
-        <div class="dropdown">
-            <%= link_to "Woman", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <%= t(".cloth", default: "Cloth") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <%= t(".shoes", default: "Shoes") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <%= t(".equipment", default: "Equipment") %>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="navbar-wagon-item">
-        <div class="dropdown">
-            <%= link_to "Children", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <%= t(".cloth", default: "Cloth") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <%= t(".shoes", default: "Shoes") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <%= t(".equipment", default: "Equipment") %>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="navbar-wagon-item">
-        <div class="dropdown">
-            <%= link_to "Sports", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <%= t(".outdoor", default: "Outdoor") %>
+                <%= t(".land", default: "Land/Outdoor") %>
               <% end %>
             </li>
             <li>
@@ -93,12 +28,38 @@
             </li>
             <li>
               <%= link_to "#" do %>
-                <%= t(".mountain", default: "Mountain") %>
+                <%= t(".groups", default: "Group activity") %>
               <% end %>
             </li>
           </ul>
         </div>
       </div>
+
+
+      <div class="navbar-wagon-item">
+        <div class="dropdown">
+            <%= link_to "Bookings", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".pendingBookings", default: "Pending-Bookings") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".confirmedbookings", default: "Confirmed-Bookings") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+                <%= t(".previousbookings", default: "Previous-Bookings") %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <a href="" class="navbar-wagon-item navbar-wagon-link">About us</a>
 
 
     <% if user_signed_in? %>
