--- a/app/views/equipments/new.html.erb
+++ b/app/views/equipments/new.html.erb
@@ -9,7 +9,7 @@
       <%= f.input :price_per_day %>
       <%= f.input :photo %>
       <%= f.input :photo_cache, as: :hidden %>
-      <%= f.submit "Add a equipment", class: "btn btn-primary btn-equipment-add" %>
+      <%= f.submit "Add a equipment", class: "btn-equipment-add btn-treehouse" %>
     <% end %>
   </div>
 </div>
