add booking section

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,12 +1,19 @@
-<h1>Booking Recored</h1>
-<p>Only for Development</p>
-<%= @bookings %>
-<br>
-<hr>
-<% @bookings.each do |booking| %>
-<p> booking_id: <%= booking %> </p>
-<p> user_id: <%= booking.user.email %> </p>
-<p> starts at: <%= booking.starts_at %> </p>
-<p> ends at: <%= booking.ends_at %> </p>
-<br>
-<% end %>
+<div class="container">
+  <div class="title" style="text-align: center;">
+    <h1 style="color: #FF5910;">Booking Recored</h1>
+    <p>Only for Development for now</p>
+  </div>
+
+  <hr>
+  <% @bookings.each do |booking| %>
+  <% if booking.user == current_user %>
+  <p> booking_id: <%= booking %> </p>
+  <p> user_id: <%= booking.user.email %> </p>
+  <p> starts at: <%= booking.starts_at %> </p>
+  <p> ends at: <%= booking.ends_at %> </p>
+  <p> price: <%= booking.starts_at.class %></p>
+  <p> I need to learn how to deal with Date</p>
+  <% end %>
+  <br>
+  <% end %>
+</div>
