--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,17 +41,17 @@
             <%= link_to "Bookings", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to "#" do %>
+              <%= link_to bookings_path do %>
                 <%= t(".pendingBookings", default: "Pending-Bookings") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
+              <%= link_to bookings_path do %>
                 <%= t(".confirmedbookings", default: "Confirmed-Bookings") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
+              <%= link_to bookings_path do %>
                 <%= t(".previousbookings", default: "Previous-Bookings") %>
               <% end %>
             </li>
