--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
 
   <div class="footer-details">
     <p>
-    <p>Rudi Dutschkestr.26</p>
+    <p>Rudi Dutschke Str.26</p>
     <p>10304 Berlin</p>
     <p> Deutschland</p>
     <p>030 53665777</p>
