--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,22 +13,22 @@
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
               <%= link_to "#" do %>
-                <%= t(".aviation", default: "Aviation/air-related") %>
+                <%= t(".aviation", default: "Air") %>
               <% end %>
             </li>
             <li>
               <%= link_to "#" do %>
-                <%= t(".land", default: "Land/Outdoor") %>
+                <%= t(".land", default: "Land") %>
               <% end %>
             </li>
             <li>
               <%= link_to "#" do %>
-                <%= t(".watersports", default: "Watersports") %>
+                <%= t(".watersports", default: "Water") %>
               <% end %>
             </li>
             <li>
               <%= link_to "#" do %>
-                <%= t(".groups", default: "Group activity") %>
+                <%= t(".groups", default: "Groups") %>
               <% end %>
             </li>
           </ul>
