created and connected the about page, blanko page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <a href="" class="navbar-wagon-item navbar-wagon-link">About us</a>
+      <a href="http://localhost:3000/about" class="navbar-wagon-item navbar-wagon-link">About us</a>
 
 
     <% if user_signed_in? %>
