add seed file and a link from landing to index

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <br>
     <form action="">
       <!-- <input type="text" placeholder="Search"> -->
-      <a href="http://localhost:3000/equipments" class="btn-treehouse">Go!</a>
+      <%= link_to "Go!", equipments_path, class: "btn-treehouse" %>
       <!-- <input type="submit" value="Send" class="btn-treehouse"> -->
     </form>
   </div>
