--- a/app/views/equipments/index.html.erb
+++ b/app/views/equipments/index.html.erb
@@ -1,6 +1,6 @@
 <br>
   <div class="row" class="flex-item" id="button-position">
-    <a href="http://localhost:3000/equipments/new" class="btn-treehouse">I want to rent out my stuff!</a>
+        <%= link_to "I want to rent out my stuff!",  new_equipment_path, class: "btn-treehouse"%>
    </div>
 <br>
 <div class="container">
