--- a/app/views/equipments/index.html.erb
+++ b/app/views/equipments/index.html.erb
@@ -1,6 +1,10 @@
+
+<div class="container">
+  <br>
+  <h1 style="color: #FF5910;">Welcome to SportsX</h1>
+  <p style="color: #FF5910;">Here is the list of the <strong>Sports Equipment</strong></p>
 <br>
-<div class="row" class="flex-item" id="button-position">
-  <%=  link_to  "I want to rent out my stuff!", new_equipment_path, class: 'btn-treehouse' %>
+<div class="row" class="flex-item">
   <br>
   <div class="container">
     <div class="row">
@@ -9,7 +13,10 @@
           <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));"><%= cl_image_tag equipment.photo , class: "img-tag-card" %>
             <%= image_tag "avatars/johnsnow.jpg", :class => "card-user" %>
             <div class="card-category"><%= equipment.category %></div>
-            <div class="card-description"><h2><%= equipment.product_name %></h2></div>
+            <div class="card-description">
+              <h2><%= equipment.product_name %></h2>
+              <p><%= equipment.location %></p>
+            </div>
             <%=  link_to  "", equipment_path(equipment), class: 'card-link' %>
           </div>
         </div>
@@ -19,9 +26,18 @@
 </div>
 <br>
 
+<hr>
+
+<div id="button-position">
+  <%=  link_to  "I want to rent out my stuff, too!", new_equipment_path, class: 'btn-treehouse' %>
+</div>
+
+<hr>
+
 <div
   id="map"
   style="width: 100%;
   height: 600px;"
   data-markers="<%= @markers.to_json %>"
 ></div>
+</div>
