--- a/app/views/equipments/show.html.erb
+++ b/app/views/equipments/show.html.erb
@@ -24,6 +24,11 @@
       <% end %>
     </div>
   </div>
-    <%= link_to "Back", equipments_path, class: 'btn-treehouse' %>
+  <%= link_to "Back to list", equipments_path, class: 'btn-treehouse' %>
+  <br>
+  <hr>
+  <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>"></div>
 </div>
+
+
 
