--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.surfer.com/uploads/2012/11/SFGP-110400-NSU-04-HR.jpg');">
   <div class="banner-content">
     <h1>SportX</h1>
-    <p>The best sports equipment rental website</p>
+    <p><span id="banner-typed-text"></span></p>
     <form action="">
       <input type="text" placeholder="Search">
     </form>
@@ -14,3 +14,5 @@
     </form>
   </div>
 </div>
+
+
