--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,6 @@
-<html>
-  <h1>About us</h1>
-  <h2>We are great....:)</h2>
-</html>
+<div class="container">
+  <div class="about-description">
+  <h1 style="color: #FF5910;">About</h1>
+  <p>Under construction</p>
+  </div>
+</div>
