--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,23 +12,28 @@
             <%= link_to "Categories", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to "#" do %>
+              <%= link_to air_path do %>
                 <%= t(".aviation", default: "Air") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
+              <%= link_to land_path do %>
                 <%= t(".land", default: "Land") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
+              <%= link_to water_path do %>
                 <%= t(".watersports", default: "Water") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
+              <%= link_to groups_path do %>
                 <%= t(".groups", default: "Groups") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to equipments_path do %>
+                <%= t(".groups", default: "All") %>
               <% end %>
             </li>
           </ul>
