--- a/app/views/categories/air.html.erb
+++ b/app/views/categories/air.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <br>
-  <h1 style="color: #FF5910;">Welcome to SportsX</h1>
-  <p style="color: #FF5910;">Here is the list of the <strong>Sports Equipment</strong></p>
+  <h1 style="color: #FF5910;">Air</h1>
+  <p style="color: #FF5910;">Here is the list of the <strong>Air Sports Equipment</strong></p>
 <br>
 <div class="row" class="flex-item">
   <br>
@@ -12,7 +12,6 @@
           <div class="col-xs-12  col-sm-6 col-md-4">
             <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));"><%= cl_image_tag equipment.photo , class: "img-tag-card" %>
               <%= image_tag "avatars/johnsnow.jpg", :class => "card-user" %>
-              <div class="card-category"><%= equipment.category %></div>
               <div class="card-description">
                 <h2><%= equipment.product_name %></h2>
                 <p><%= equipment.location %></p>
