add a video on home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,11 +8,15 @@
     </form>
     <br>
     <form action="">
-      <!-- <input type="text" placeholder="Search"> -->
       <%= link_to "Go!", equipments_path, class: "btn-treehouse" %>
-      <!-- <input type="submit" value="Send" class="btn-treehouse"> -->
     </form>
   </div>
 </div>
+
+<!-- <div class="video-wrap">
+    <p class="video-p"><span id="banner-typed-text"></span></p>
+      <video src="http://res.cloudinary.com/dyoy2poun/video/upload/v1534368483/video.mp4" autoplay>
+  </video>
+</div> -->
 
 
