--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,14 +6,18 @@
 
   <hr>
   <% @bookings.each do |booking| %>
-  <% if booking.user == current_user %>
-  <p> booking_id: <%= booking %> </p>
-  <p> user_id: <%= booking.user.email %> </p>
-  <p> starts at: <%= booking.starts_at %> </p>
-  <p> ends at: <%= booking.ends_at %> </p>
-  <p> price: <%= booking.starts_at.class %></p>
-  <p> I need to learn how to deal with Date</p>
+  <div class="card-for-book">
+    <% if booking.user == current_user %>
+    <p> photo: <%= booking.equipment.photo %> </p>
+    <p> product: <%= booking.equipment.product_name %> </p>
+    <p> user_id: <%= booking.user.email %> </p>
+    <p> starts at: <%= booking.starts_at %> </p>
+    <p> ends at: <%= booking.ends_at %> </p>
+    <p style="color: #FF5910;"> price: <%= (Date.parse(booking.ends_at.to_s) - Date.parse(booking.starts_at.to_s)).to_i*booking.equipment.price_per_day %></p>
+    <% end %>
+    </div>
+    <br>
   <% end %>
   <br>
-  <% end %>
+  <hr>
 </div>
