changes by CW Aug.16

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,6 +36,11 @@
                 <%= t(".groups", default: "All") %>
               <% end %>
             </li>
+            <li>
+              <%= link_to new_equipment_path do %>
+                <%= t(".rentout", default: "Rent Out") %>
+              <% end %>
+            </li>
           </ul>
         </div>
       </div>
