--- a/app/views/equipments/index.html.erb
+++ b/app/views/equipments/index.html.erb
@@ -1,14 +1,14 @@
 
 <div class="container">
   <br>
-  <h1 style="color: #FF5910;">Welcome to SportsX</h1>
+  <h1 style="color: #FF5910;">Welcome to SportX</h1>
   <p style="color: #FF5910;">Here is the list of the <strong>Sports Equipment</strong></p>
-<br>
-<div class="row" class="flex-item">
   <br>
-  <div class="container">
-    <div class="row">
-      <% @equipments.each do |equipment| %>
+  <div class="row" class="flex-item">
+    <br>
+    <div class="container">
+      <div class="row">
+        <% @equipments.each do |equipment| %>
         <div class="col-xs-12  col-sm-6 col-md-4">
           <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));"><%= cl_image_tag equipment.photo , class: "img-tag-card" %>
             <%= image_tag "avatars/johnsnow.jpg", :class => "card-user" %>
@@ -20,24 +20,24 @@
             <%=  link_to  "", equipment_path(equipment), class: 'card-link' %>
           </div>
         </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
-<br>
+  <br>
 
-<hr>
+  <hr>
 
-<div id="button-position">
-  <%=  link_to  "I want to rent out my stuff, too!", new_equipment_path, class: 'btn-treehouse' %>
-</div>
+  <div id="button-position">
+    <%=  link_to  "I want to rent out my stuff, too!", new_equipment_path, class: 'btn-treehouse' %>
+  </div>
 
-<hr>
+  <hr>
 
-<div
+  <div
   id="map"
   style="width: 100%;
   height: 600px;"
   data-markers="<%= @markers.to_json %>"
-></div>
+  ></div>
 </div>
