--- a/app/views/equipments/new.html.erb
+++ b/app/views/equipments/new.html.erb
@@ -1,15 +1,18 @@
+<%= render 'shared/genericbanner' %>
+
 <div class="container">
+  <h1 style="color: #FF5910;">Add new stuff to rent out!</h1>
   <div class="form">
     <%= simple_form_for(@equipment) do |f| %>
-      <%= f.input :category %>
-      <%= f.input :brand %>
-      <%= f.input :product_name %>
-      <%= f.input :size %>
-      <%= f.input :location %>
-      <%= f.input :price_per_day %>
-      <%= f.input :photo %>
-      <%= f.input :photo_cache, as: :hidden %>
-      <%= f.submit "Add a equipment", class: "btn-equipment-add btn-treehouse" %>
+    <%= f.input :category, :collection => [['Air',1],['Land',2],['Water',3],['Groups',4]] %>
+    <%= f.input :brand %>
+    <%= f.input :product_name %>
+    <%= f.input :size %>
+    <%= f.input :location %>
+    <%= f.input :price_per_day %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
+    <%= f.submit "Add a equipment", class: "btn-equipment-add btn-treehouse" %>
     <% end %>
   </div>
 </div>
