--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,40 @@
+<div>
+  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://source.unsplash.com/1600x900/?sports,equipment');">
+    <div class="banner-content">
+      <h1>SportX</h1>
+      <p><span id="banner-typed-text"></span></p>
+      <form action="">
+        <input type="text" placeholder="Search">
+      </form>
+      <br>
+      <form action="">
+        <%= link_to "Go!", equipments_path, class: "btn-treehouse" %>
+      </form>
+    </div>
+  </div>
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.surfer.com/uploads/2012/11/SFGP-110400-NSU-04-HR.jpg');">
-  <div class="banner-content">
-    <h1>SportX</h1>
-    <p><span id="banner-typed-text"></span></p>
-    <form action="">
-      <input type="text" placeholder="Search">
-    </form>
+  <br>
+  <div class="row" class="flex-item">
     <br>
-    <form action="">
-      <%= link_to "Go!", equipments_path, class: "btn-treehouse" %>
-    </form>
+    <div class="container">
+      <div class="row">
+        <% @equipments.each do |equipment| %>
+        <div class="col-xs-12  col-sm-6 col-md-4">
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));"><%= cl_image_tag equipment.photo , class: "img-tag-card" %>
+            <%= image_tag "avatars/johnsnow.jpg", :class => "card-user" %>
+            <div class="card-category"><%= equipment.category %></div>
+            <div class="card-description">
+              <h2><%= equipment.product_name %></h2>
+              <p><%= equipment.location %></p>
+            </div>
+            <%=  link_to  "", equipment_path(equipment), class: 'card-link' %>
+          </div>
+        </div>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
-
 <!-- <div class="video-wrap">
     <p class="video-p"><span id="banner-typed-text"></span></p>
       <video src="http://res.cloudinary.com/dyoy2poun/video/upload/v1534368483/video.mp4" autoplay>
