--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,23 +1,32 @@
+
+
 <div class="container">
-  <div class="title" style="text-align: center;">
-    <h1 style="color: #FF5910;">Booking Recored</h1>
-    <p>Only for Development for now</p>
+  <div class="title">
+    <h1 class="orange-font">Booking Record for confirmed</h1>
   </div>
 
   <hr>
-  <% @bookings.each do |booking| %>
-  <div class="card-for-book">
-    <% if booking.user == current_user %>
-    <p> photo: <%= booking.equipment.photo %> </p>
-    <p> product: <%= booking.equipment.product_name %> </p>
-    <p> user_id: <%= booking.user.email %> </p>
-    <p> starts at: <%= booking.starts_at %> </p>
-    <p> ends at: <%= booking.ends_at %> </p>
-    <p style="color: #FF5910;"> price: <%= (Date.parse(booking.ends_at.to_s) - Date.parse(booking.starts_at.to_s)).to_i*booking.equipment.price_per_day %></p>
+  <% if @bookings %>
+    <% @bookings.each do |booking| %>
+      <% if booking.user == current_user %>
+        <% if booking.status == "true" %>
+          <div class="card-for-book">
+            <p> <%= cl_image_tag booking.equipment.photo, height: 150, width: 220, crop: :fill, class: "card-booking-confirmed-img" %> </p>
+            <p class="margin-booking-card-top"> product: <%= booking.equipment.product_name %> </p>
+            <p> user_id: <%= booking.user.email %></p>
+            <p> starts at: <%= booking.starts_at %></p>
+            <p> ends at: <%= booking.ends_at %></p>
+            <p> status: confirmed </p>
+            <p class="margin-booking-card-bottom orange-font"> price: <%= (Date.parse(booking.ends_at.to_s) - Date.parse(booking.starts_at.to_s)).to_i*booking.equipment.price_per_day %></p>
+          </div>
+        <% end %>
+      <% end %>
+      <br>
     <% end %>
-    </div>
-    <br>
-  <% end %>
+    <% else %>
+      <h3 class="booking-message" style="color: #FF5910;">No confirmed bookings yet</h3>
+    <% end %>
   <br>
   <hr>
 </div>
+
