--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,26 +46,25 @@
             <%= link_to "Bookings", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to bookings_path do %>
-                <%= t(".pendingBookings", default: "Pending-Bookings") %>
+              <%= link_to bookings_pendings_path do %>
+                <%= t(".pendingBookings", default: "Pending Bookings") %>
               <% end %>
             </li>
             <li>
               <%= link_to bookings_path do %>
-                <%= t(".confirmedbookings", default: "Confirmed-Bookings") %>
+                <%= t(".confirmedbookings", default: "Confirmed Bookings") %>
               <% end %>
             </li>
             <li>
-              <%= link_to bookings_path do %>
-                <%= t(".previousbookings", default: "Previous-Bookings") %>
+              <%= link_to bookings_previous_path do %>
+                <%= t(".previousbookings", default: "Previous Bookings") %>
               <% end %>
             </li>
           </ul>
         </div>
       </div>
 
-      <a href="http://localhost:3000/about" class="navbar-wagon-item navbar-wagon-link">About us</a>
-
+      <%= link_to "About us", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
     <% if user_signed_in? %>
 
