fix map on index and category pages

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,7 +17,7 @@
   background-position: center;
   color: black;
   position: relative;
-  box-shadow: 0 7px 14px;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .7);
   margin: 15px;
 }
 
