--- a/app/views/equipments/index.html.erb
+++ b/app/views/equipments/index.html.erb
@@ -34,10 +34,5 @@
 
   <hr>
 
-  <div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-  ></div>
+  <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>"></div>
 </div>
