--- a/app/views/equipments/show.html.erb
+++ b/app/views/equipments/show.html.erb
@@ -17,13 +17,18 @@
       <p>price: <%= @equipment.price_per_day %> euro / day</p>
     </div>
     <div class="choose_date">
-      <%= simple_form_for [@equipment, @booking], html: {class: 'from-horizontal'} do |f| %>
-        <%= f.input :starts_at, as: :date, html5: true %>
-        <%= f.input :ends_at, as: :date, html5: true %>
-        <%= f.submit 'Reserve', class: 'btn btn-treehouse btn-equipment-reserve' %>
-      <% end %>
+      <div class="form-wrapper" style="margin: 0 auto;">
+
+        <%= simple_form_for [@equipment, @booking], html: {class: "datepicker-form"}, method: "post" do |f| %>
+          <%= f.input :starts_at, as: :string, required: false, input_html: {class: "datepicker"} %>
+          <%= f.input :ends_at, as: :string, required: false, input_html: {class: "datepicker"} %>
+          <%= f.button :submit, "Reserve", class: "btn btn-treehouse btn-equipment-reserve" %>
+        <% end %>
+      </div>
     </div>
   </div>
+
+
   <%= link_to "Back to list", equipments_path, class: 'btn-treehouse' %>
 
 
