redesign some parts

--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -1,3 +1,14 @@
 .about-description {
   text-align: center;
 }
+
+.card-about {
+  background-color: white;
+  margin-top: 80px;
+  padding-bottom: 200px;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  border-radius: 3px;
+  padding-right: 120px;
+  padding-left: 120px;
+  margin-bottom: 100px;
+}
