--- a/app/assets/stylesheets/components/_equipment-card.scss
+++ b/app/assets/stylesheets/components/_equipment-card.scss
@@ -25,3 +25,28 @@
   margin: auto;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
+
+.box {
+  display: flex;
+}
+
+.box-right {
+  width: 800px;
+  height: 800px;
+}
+
+.box-left {
+  margin: auto;
+}
+
+
+.card-for-show {
+  background-color: white;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  border-radius: 3px;
+  margin-bottom: 50px;
+}
+
+.btn-back {
+  margin-left: 50px;
+}
