--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,15 +2,16 @@
   <div class="title">
     <h1 class="orange-font">Booking Record for confirmed</h1>
   </div>
-<%if  @bookings.first.nil? %>
-  <h3 class="booking-message orange-font">No confirmed bookings yet</h3>
-<% end %>
   <hr>
+  <%if  @bookings.first.nil? %>
+    <h3 class="booking-message orange-font">No confirmed bookings yet</h3>
+  <% end %>
+
   <% if @bookings %>
-    <% @bookings.each do |booking| %>
-      <% if booking.user == current_user %>
-        <% if booking.status == "true" %>
-          <div class="card-for-book">
+    <% @bookings.reverse_each do |booking| %>
+      <div class="card-for-book">
+        <% if booking.user == current_user %>
+          <% if booking.status == "true" %>
             <p> <%= cl_image_tag booking.equipment.photo, height: 150, width: 220, crop: :fill, class: "card-booking-confirmed-img" %> </p>
             <p class="margin-booking-card-top"> product: <%= booking.equipment.product_name %> </p>
             <p> user_id: <%= booking.user.email %></p>
@@ -18,10 +19,9 @@
             <p> ends at: <%= booking.ends_at %></p>
             <p> status: confirmed </p>
             <p class="margin-booking-card-bottom orange-font"> price: <%= (Date.parse(booking.ends_at.to_s) - Date.parse(booking.starts_at.to_s)).to_i*booking.equipment.price_per_day %></p>
-          </div>
+          <% end %>
         <% end %>
-      <% end %>
-      <br>
+      </div>
     <% end %>
   <% end %>
   <br>
