--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="about-description">
+  <div class="about-description card-about">
     <div class="title">
       <h1 class="orange-font">About</h1>
     </div>
