--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
 <div class="footer">
 
   <div class="footer-links">
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.instagram.com/explore/tags/sports/?hl=en"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/sport/events/"><i class="fab fa-facebook"></i></a>
+    <a href="https://twitter.com/hashtag/sports?lang=en"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/authwall?trk=ripf&trkInfo=AQHQGYc3WWsr3gAAAWVDZHoYP626GLfJthc52gvlYAoZqTb7bdf0NRSuL55xgxDsxuXM107c7cEaJQ1lvnNCbT1HuRF78vsdM6mfvtQoKpLUc1lLsPwjMqyhxMMi5mKPalQdbxU=&originalReferer=https://www.google.com.ua/&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fjobs%2Fsports-jobs"><i class="fab fa-linkedin"></i></a>
   </div>
 
   <div class="footer-details">
