--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,5 +3,21 @@
 }
 
 .form {
-  margin: 70px;
+  margin-top: 30px;
+  margin-right: 150px;
+  margin-left: 150px;
+  padding-right: 40px;
+  padding-left: 40px;
+}
+
+.btn-add {
+  margin-left: 75px;
+}
+
+
+.form-card {
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  padding: 10px;
 }
