--- a/app/views/bookings/previous.html.erb
+++ b/app/views/bookings/previous.html.erb
@@ -15,8 +15,7 @@
             <p> user_id: <%= booking.user.email %></p>
             <p> starts at: <%= booking.starts_at %></p>
             <p> ends at: <%= booking.ends_at %></p>
-            <p> status: <%= booking.status %> </p>
-            <%= link_to "confirm", edit_booking_path(booking), class: "btn-treehouse btn-confirm" %>
+            <p> status: Done!</p>
             <p class="margin-booking-card-bottom orange-font"> price: <%= (Date.parse(booking.ends_at.to_s) - Date.parse(booking.starts_at.to_s)).to_i*booking.equipment.price_per_day %></p>
           <% end %>
         <% end %>
