--- a/app/assets/stylesheets/components/_equipment-card.scss
+++ b/app/assets/stylesheets/components/_equipment-card.scss
@@ -50,3 +50,10 @@
 .btn-back {
   margin-left: 50px;
 }
+
+.white-wrapper {
+  background-color: #FFFFFF;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
