Profile Avatar; Cards revisisted

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,7 +15,7 @@
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-image: cover !important;
   background-position: center;
-  color: black;
+  color: #FF5910;
   position: relative;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, .7);
   margin: 15px;
@@ -54,8 +54,6 @@
 
 .card-description p {
   font-size: 14px;
-  opacity: 0.7;
-  text-align: right;
 }
 
 .card-link {
