--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,12 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://source.unsplash.com/1600x900/?sports,equipment');">
   <h1>SportX</h1>
-  <div class="banner-content">
     <p><span id="banner-typed-text"></span></p>
-  </div>
-  <div class="banner-content" id="banner-content-inline">
+  <div style="display: flex">
     <%= form_tag equipments_path, method: :get do %>
     <%= text_field_tag :query, params[:query],
     class: "form-control",
     placeholder: "Find equipment" %>
-      <%= submit_tag 'Go!', class: "go-btn-treehouse", class: "go-btn-position" %>
+      <%= submit_tag 'Go!', class: "btn-treehouse" %>
       <% end %>
   </div>
 </div>
